Fix: QR code button on iOS
The issue seems to be with font rendering - on iOS there was extra space
below the QR code button, which is supposed to be square.

Two fixes here, maybe only one is necessary?

- Use a background image instead of an img tag
- set line height to 1

I guess line height is usually a bit more than 1 for legibility of
multiple lines of text, but for text in a button it's not needed?

--- a/src/components/CardActions.css
+++ b/src/components/CardActions.css
@@ -3,11 +3,12 @@
   justify-content: space-between;
   max-width: 400px;
   margin: auto;
+  font-size: 14px;
 }
 
 .CardActions button {
-  padding: 0.5rem 1rem;
-  font-size: 14px;
+  padding: 0.7em 1.3em;
+  line-height: 1;
   font-weight: bold;
   color: white;
   border-color: white;
